Fixed title screen on mobile

--- a/public/scss/modules/_title-screen.scss
+++ b/public/scss/modules/_title-screen.scss
@@ -16,7 +16,9 @@ p {
 
   flex-direction: column;
   padding: 20px 40px;
-  min-width: 500px;
+  max-width: 500px;
+  width: 100%;
+  margin: 0 20px;
 
   input[type="text"] {
     width: 100%;
